chore: style grid one

--- a/index.html
+++ b/index.html
@@ -34,14 +34,17 @@
       </div>
 
       <div class="two">
+        <div class="upper">
+          <img src="./images/icon-work.svg" alt="">
+        </div>
         <div class="two-content">
             <div class="header">
-              <p>Work</p>
-              <img src="./images/icon-ellipsis.svg" alt="" height="9px" width="20px">
+              <p class="heading">Work</p>
+              <img src="./images/icon-ellipsis.svg" alt="" height="8px">
             </div>
-            <div>
-              <p>32hrs</p>
-              <p>Last Week - 36hrs</p>
+            <div class="info">
+              <p class="large-time">32hrs</p>
+              <p class="time">Last Week - 36hrs</p>
             </div>
         </div>
       </div>
