--- a/index.html
+++ b/index.html
@@ -50,69 +50,85 @@
       </div>
 
       <div class="three">
-        <div>
-          <div>
-            <p>Play</p>
-            <img src="./images/icon-ellipsis.svg" alt="">
-          </div>
-          <div>
-            <p>10hrs</p>
-            <p>Last Week - 8hrs</p>
-          </div>
+        <div class="upper">
+          <img src="./images/icon-play.svg" alt="">
+        </div>
+        <div class="two-content">
+            <div class="header">
+              <p class="heading">Work</p>
+              <img src="./images/icon-ellipsis.svg" alt="" height="8px">
+            </div>
+            <div class="info">
+              <p class="large-time">10hrs</p>
+              <p class="time">Last Week - 8hrs</p>
+            </div>
         </div>
       </div>
 
       <div class="four">
-        <div>
-          <div>
-            <p>Study</p>
-            <img src="./images/icon-ellipsis.svg" alt="">
-          </div>
-          <div>
-            <p>4hrs</p>
-            <p>Last Week - 7hrs</p>
-          </div>
+        <div class="upper">
+          <img src="./images/icon-study.svg" alt="">
+        </div>
+        <div class="two-content">
+            <div class="header">
+              <p class="heading">Study</p>
+              <img src="./images/icon-ellipsis.svg" alt="" height="8px">
+            </div>
+            <div class="info">
+              <p class="large-time">4hrs</p>
+              <p class="time">Last Week - 7hrs</p>
+            </div>
         </div>
       </div>
 
       <div class="five">
-        <div>
-          <div>
-            <p>Exercise</p>
-            <img src="./images/icon-ellipsis.svg" alt="">
-          </div>
-          <div>
-            <p>4hrs</p>
-            <p>Last Week - 5hrs</p>
-          </div>
+        <div class="upper">
+          <img src="./images/icon-exercise.svg" alt="">
+        </div>
+        <div class="two-content">
+            <div class="header">
+              <p class="heading">Exercise</p>
+              <img src="./images/icon-ellipsis.svg" alt="" height="8px">
+            </div>
+            <div class="info">
+              <p class="large-time">4hrs</p>
+              <p class="time">Last Week - 5hrs</p>
+            </div>
         </div>
       </div>
 
       <div class="six">
-        <div>
-          <div>
-            <p>Social</p>
-            <img src="./images/icon-ellipsis.svg" alt="">
-          </div>
-          <div>
-            <p>5hrs</p>
-            <p>Last Week - 10hrs</p>
-          </div>
+        <div class="upper social">
+          <img src="./images/icon-social.svg" alt="">
+        </div>
+        <div class="two-content">
+            <div class="header">
+              <p class="heading">Social</p>
+              <img src="./images/icon-ellipsis.svg" alt="" height="8px">
+            </div>
+            <div class="info">
+              <p class="large-time">5hrs</p>
+              <p class="time">Last Week - 10hrs</p>
+            </div>
         </div>
       </div>
 
       <div class="seven">
-        <div>
-          <div>
-            <p>Self Care</p>
-            <img src="./images/icon-ellipsis.svg" alt="">
-          </div>
-          <div>
-            <p>2hrs</p>
-            <p>Last Week - 2hrs</p>
-          </div>
+        <div class="upper self-care">
+          <img src="./images/icon-self-care.svg" alt="">
+        </div>
+        <div class="two-content">
+            <div class="header">
+              <p class="heading">Self Care</p>
+              <img src="./images/icon-ellipsis.svg" alt="" height="8px">
+            </div>
+            <div class="info">
+              <p class="large-time">2hrs</p>
+              <p class="time">Last Week - 2hrs</p>
+            </div>
         </div>
       </div>
+
     </div>
   </div>
 </body>
