--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
       </div>
 
       <div class="five">
-        <div class="upper">
+        <div class="upper exercise">
           <img src="./images/icon-exercise.svg" alt="">
         </div>
         <div class="two-content">
